<resources>
    <string name="app_name">EazyGo</string>
    <string name="login">Sign Up</string>
    <string name="Login">SIGN UP</string>
    <string name="forgot">Already an user? Login</string>
    <string name="login2">Login</string>
    <string name="signbtn">LOGIN</string>
    <string name="title_activity_login">Title</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="old">Not yet registered? Sign Up</string>
</resources>